# starting-ragchatbot-codebase

./: .gitignore  CLAUDE.md  justfile  pyproject.toml  pytest.ini  user-request-flow.md
.claude/commands/: implement-feature.md
.github/workflows/: claude-code-review.yml  claude.yml
backend/: ai_generator.py  app.py  config.py  rag_system.py  search_tools.py
backend/tests/: conftest.py  test_ai_generator.py  test_api.py  test_config.py  test_rag_system.py  test_search_tools.py
frontend/: index.html  script.js  style.css
scripts/: check-format.sh  format.sh  lint.sh  test-cov.sh  test.sh
